fix: always show scrollbars

--- a/src/web/styles/style.css
+++ b/src/web/styles/style.css
@@ -50,6 +50,7 @@ button {
 }
 
 ::-webkit-scrollbar {
+  -webkit-appearance: none;
   padding: 0;
   margin: 0;
   width: 3px;
